# wokwi-board-settings-samples

./: Cargo.toml  build.rs  diagram.json  rust-toolchain.toml  wokwi.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
