[package]
edition = "2021"
name    = "led-flashing"
version = "0.1.0"

[[bin]]
name = "led-flashing"
path = "./src/bin/main.rs"

[dependencies]
esp-alloc = "0.7.0"
esp-hal = { version = "0.23.1", features = ["esp32", "unstable"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
